[package]
name = "tmm"
version = "0.1.0"
authors = ["drootang <drootang@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[profile.release]
strip = true

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
exec = "0.3.1"
tui-textarea = "0.4.0"
indexmap = "2.2.3"
clap = { version = "4.5.1", features = ["derive"] }
